--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@tabler/icons-react": "^3.35.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.15.0",
     "iron-session": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.488.0",
+    "motion": "^12.23.12",
+    "motions": "^0.0.1",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -48,7 +52,8 @@
     "react-intersection-observer": "^9.16.0",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -59,7 +64,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.0.0-alpha.25",
     "typescript": "^5"
   }
 }
