--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.8",
     "zod": "^3.24.4"
   },
   "devDependencies": {
