--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.0.0-alpha.25",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
