--- a/env.example
+++ b/env.example
@@ -19,9 +19,9 @@ SSO_JWT_SECRET=your-sso-jwt-secret-shared-with-core-app
 SSO_ISSUER=sacavia-core
 SSO_AUDIENCE=sacavia-contest
 
-# Authentication
-NEXTAUTH_SECRET=your-nextauth-secret-here
-NEXTAUTH_URL=https://vote.sacavia.com
+# Authentication (using Payload CMS JWT - no NextAuth needed)
+# NEXTAUTH_SECRET=not-needed
+# NEXTAUTH_URL=not-needed
 
 # External Services
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=your-ga-id
