--- a/env.example
+++ b/env.example
@@ -1,29 +1,24 @@
-# Contest App Environment Variables
+# Contest App Environment Variables - Production Ready
 # Copy this file to .env.local and fill in your values
 
-# Main App Configuration
+# Main App Configuration (REQUIRED)
 NEXT_PUBLIC_MAIN_APP_URL=https://sacavia.com
 NEXT_PUBLIC_CONTEST_APP_URL=https://vote.sacavia.com
 NEXT_PUBLIC_API_BASE_URL=https://sacavia.com/api
 
-# Database Configuration (shared with main app)
-# Note: Contest app is frontend-only and fetches data from main app API
-# DATABASE_URL=mongodb://localhost:27017/sacavia
-# PAYLOAD_SECRET=your-payload-secret-here
+# Database Configuration (REQUIRED - Must match main app)
+# Note: Contest app reads JWT tokens from main app for SSO
+PAYLOAD_SECRET=your-payload-secret-here-must-match-main-app
 
-# Session Management
+# Session Management (REQUIRED)
 SESSION_PASSWORD=your-super-secure-session-password-at-least-32-characters-long
 
-# SSO Configuration (for core app integration)
-SSO_JWT_SECRET=your-sso-jwt-secret-shared-with-core-app
+# SSO Configuration (REQUIRED - Must match main app)
+SSO_JWT_SECRET=your-sso-jwt-secret-shared-with-core-app-must-match-main-app
 SSO_ISSUER=sacavia-core
 SSO_AUDIENCE=sacavia-contest
 
-# Authentication (using Payload CMS JWT - no NextAuth needed)
-# NEXTAUTH_SECRET=not-needed
-# NEXTAUTH_URL=not-needed
-
-# External Services
+# External Services (Optional)
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=your-ga-id
 NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
 
@@ -31,7 +26,3 @@ NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
 NEXT_PUBLIC_ENABLE_CONTEST_CREATION=true
 NEXT_PUBLIC_ENABLE_VOTING=true
 NEXT_PUBLIC_ENABLE_REAL_TIME_UPDATES=true
-
-# Ingest Configuration (for cron jobs)
-# Note: Contest app no longer has local data storage
-# CRON_KEY=your-secure-cron-key-here
